--- a/SchoolManagementSystem/Views/Home/Index.cshtml
+++ b/SchoolManagementSystem/Views/Home/Index.cshtml
@@ -2,13 +2,13 @@
     ViewBag.Title = "Home Page";
 }
 <div class="dashboard">
-    <div class="row">
+    @*<div class="row">
         <div class="col-sm-12">
             <p>
                 <span>Home</span> | <span class="text-info">Admin</span>
             </p>
         </div>
-    </div>
+    </div>*@
     <div class="row margin-right-0px dashboard-widget">
         <div class="col-sm-3 dashboard-widget-container">
             <div class="tab">
