--- a/SchoolManagementSystem/Views/Teacher/Index.cshtml
+++ b/SchoolManagementSystem/Views/Teacher/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "All Students";
+    ViewBag.Title = "All Teachers";
 }
+
 <div class="row">
     <div class="col-sm-12">
         <div class="card">
@@ -317,7 +318,7 @@
                             <td><input type="checkbox" /></td>
                             <td>1</td>
                             <td><img src="~/assets/images/noun_35785_cc.png" class="rounded" style="width:24px;height:24px;" /></td>
-                            <td></td>
+                            <td>Name</td>
                             <td>Gender</td>
                             <td>Parent's Name</td>
                             <td>Class</td>
