--- a/SchoolManagementSystem/Views/Classes/Index.cshtml
+++ b/SchoolManagementSystem/Views/Classes/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "All Students";
+    ViewBag.Title = "Index";
 }
+
 <div class="row">
     <div class="col-sm-12">
         <div class="card">
