--- a/SchoolManagementSystem/Views/Students/Form.cshtml
+++ b/SchoolManagementSystem/Views/Students/Form.cshtml
@@ -2,3 +2,150 @@
 @{
     ViewBag.Title = "Admission Form";
 }
+<div class="row">
+    <div class="col-sm-12">
+
+        <div class="card">
+            <div class="card-header">
+                <p style="margin-bottom:0;"><label class="">Add Student Form </label><span class="pull-right"><a><i class="fa fa-caret-down text-info"></i></a> <a> <i class="fa fa-refresh text-success"></i></a><a> <i class="fa fa-close text-danger"></i></a></span></p>
+            </div>
+            <div class="card-body">
+                <div class="row form-group">
+                    <div class="col-sm-12">
+                        <h6><span class="border-bottom">Student Information</span></h6>
+                    </div>
+                </div>
+                <div class="row form-group">
+
+                    <div class="col-sm-3">
+                        <label>First Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label>Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label>First Name</label>
+                        <select class="form-control">
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-3">
+                        <label>First Name</label>
+                        <select class="form-control">
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-3">
+                        <label>First Name</label>
+                        <select class="form-control">
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                            <option value="value">text</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-3">
+                        <label>DOB</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label>Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label>Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-3">
+                        <label>DOB</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label>Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label style="width:100%;">Last Name</label>
+                        <label class="btn btn-primary btn-md" style="margin:0;">Browse<input type="file" name="name" value="" style="display:none;" /> <i class="fa fa-upload fa-2x"></i></label>
+                    </div>
+                    <div class="col-sm-3">
+
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-12">
+                        <h6><span class="border-bottom">Student Information</span></h6>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-3">
+                        <label>DOB</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label>Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label style="width:100%;">Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label style="width:100%;">Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-3">
+                        <label>DOB</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label>Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label style="width:100%;">Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                    <div class="col-sm-3">
+                        <label style="width:100%;">Last Name</label>
+                        <input type="text" name="" value="" class="form-control" />
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-3">
+                        <label style="width:100%;">DOB</label>
+                        <label class="btn btn-primary btn-md" style="margin:0;">Browse<input type="file" name="name" value="" style="display:none;" /> <i class="fa fa-upload fa-2x"></i></label>
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+                    <div class="col-sm-3">
+                    
+                    </div>
+                    <div class="col-sm-3">
+
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-12">
+                        <button class="btn btn-md btn-success" style="margin:0;">Save</button>
+                        <button class="btn btn-md btn-danger" style="margin:0;">Reset</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
