--- a/SchoolManagementSystem/css/style.css
+++ b/SchoolManagementSystem/css/style.css
@@ -54,9 +54,9 @@ body {
         }
 }
 
-.dashboard {
+/*.dashboard {
     margin: 15px;
-}
+}*/
 
 .tab {
     background-color: rgb(255, 255, 255);
