--- a/SchoolManagementSystem/Views/Home/Index.cshtml
+++ b/SchoolManagementSystem/Views/Home/Index.cshtml
@@ -3,22 +3,24 @@
 }
 <div class="dashboard">
     @*<div class="row">
-        <div class="col-sm-12">
-            <p>
-                <span>Home</span> | <span class="text-info">Admin</span>
-            </p>
-        </div>
-    </div>*@
+            <div class="col-sm-12">
+                <p>
+                    <span>Home</span> | <span class="text-info">Admin</span>
+                </p>
+            </div>
+        </div>*@
     <div class="row margin-right-0px dashboard-widget">
         <div class="col-sm-3 dashboard-widget-container">
             <div class="tab">
                 <div class="row">
-                    <div class="col-sm-5 bg-info">
-                        <img src="~/assets/images/Student-MaleFemale-icon.png" />
+                    <div class="col-sm-5 bg-danger">
+                        <div style="margin-top:20px;">
+                            <h6 class="text-center"><i class="fa fa-group fa-4x white-text"></i></h6>
+                        </div>
                     </div>
                     <div class="col-sm-7 counter-row text-left">
                         <h5>19,000</h5>
-                        <p><a href="#" class="text-success"><h3 class="">Students</h3></a></p>
+                        <p><a href="#" class="text-danger"><h3 class="">Students</h3></a></p>
                     </div>
                 </div>
             </div>
@@ -26,12 +28,14 @@
         <div class="col-sm-3 dashboard-widget-container">
             <div class="tab">
                 <div class="row">
-                    <div class="col-sm-5 bg-info">
-                        <img src="~/assets/images/Student-MaleFemale-icon.png" />
+                    <div class="col-sm-5 bg-danger">
+                        <div style="margin-top:20px;">
+                            <h6 class="text-center"><i class="fa fa-male fa-4x white-text"></i></h6>
+                        </div>
                     </div>
                     <div class="col-sm-7 counter-row text-left">
-                        <h5>1,000</h5>
-                        <p><a href="#" class="text-success"><h3 class="">Teachers</h3></a></p>
+                        <h5>19,000</h5>
+                        <p><a href="#" class="text-danger"><h3 class="">Teacher</h3></a></p>
                     </div>
                 </div>
             </div>
@@ -39,27 +43,29 @@
         <div class="col-sm-3 dashboard-widget-container">
             <div class="tab">
                 <div class="row">
-                    <div class="col-sm-5 bg-info">
-                        <img src="~/assets/images/Student-MaleFemale-icon.png" />
+                    <div class="col-sm-5 bg-danger">
+                        <div style="margin-top:20px;">
+                            <h6 class="text-center"><i class="fa fa-dollar fa-4x white-text"></i></h6>
+                        </div>
                     </div>
                     <div class="col-sm-7 counter-row text-left">
-                        <h5>9,000</h5>
-                        <p><a href="#" class="text-success"><h3 class="">Parents</h3></a></p>
+                        <h5>19,000</h5>
+                        <p><a href="#" class="text-danger"><h3 class="">Expenses</h3></a></p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-3 dashboard-widget-container">
-            @*<div style="background-color:red;height: 100%;">
-                </div>*@
             <div class="tab">
                 <div class="row">
-                    <div class="col-sm-5 bg-info">
-                        <img src="~/assets/images/Student-MaleFemale-icon.png" />
+                    <div class="col-sm-5 bg-danger">
+                        <div style="margin-top:20px;">
+                            <h6 class="text-center"><i class="fa fa-dollar fa-4x white-text"></i></h6>
+                        </div>
                     </div>
                     <div class="col-sm-7 counter-row text-left">
-                        <h5>9,000</h5>
-                        <p><a href="#" class="text-success"><h3 class="">Earnings</h3></a></p>
+                        <h5>19,000</h5>
+                        <p><a href="#" class="text-danger"><h3 class="">Due Fees</h3></a></p>
                     </div>
                 </div>
             </div>
@@ -67,76 +73,15 @@
     </div>
     <div class="row margin-right-0px dashboard-widget">
         <div class="col-sm-6 dashboard-widget-container" style="height:370px;">
-            <div id="chartContainer" style="height: 370px; max-width: 920px; margin: 0px auto; box-shadow:0px 0px 10px 0px gray"></div>
-        </div>
-        <div class="col-sm-6 dashboard-widget-container">
-            <div class="card" style="height:370px;border-radius:0px;">
+            <div class="card ">
                 <div class="card-header">
-                    <p style="margin-bottom:0;"><label class="">Upcomming Events </label><span class="pull-right"><a><i class="fa fa-caret-down text-info"></i></a> <a> <i class="fa fa-refresh text-success"></i></a><a> <i class="fa fa-close text-danger"></i></a></span></p>
+                    <p style="margin-bottom:0;"><label style="margin-bottom:0;"> Recent Activities </label> <span class="pull-right"><a href="#"><i class="fa fa-caret-down text-info"></i></a> <a> <i class="fa fa-refresh text-success"></i></a><a> <i class="fa fa-close text-danger"></i></a></span></p>
                 </div>
-                <div class="card-body">
-                    <table class="table table-striped table-bordered table-sm text-center">
-                        <tr>
-                            <th>Sun</th>
-                            <th>Mon</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thu</th>
-                            <th>Fri</th>
-                            <th>Sat</th>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td>1</td>
-                            <td>2</td>
-                            <td>3</td>
-                            <td>4</td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>7</td>
-                            <td>8</td>
-                            <td>9</td>
-                            <td class="alert-danger">10</td>
-                            <td>11</td>
-                            <td>12</td>
-                        </tr>
-                        <tr>
-                            <td>13</td>
-                            <td>14</td>
-                            <td>15</td>
-                            <td>16</td>
-                            <td>17</td>
-                            <td>18</td>
-                            <td class="alert-danger">19</td>
-                        </tr>
-                        <tr>
-                            <td class="alert-success">20</td>
-                            <td>21</td>
-                            <td>22</td>
-                            <td>23</td>
-                            <td>24</td>
-                            <td>25</td>
-                            <td>26</td>
-                        </tr>
-                        <tr>
-                            <td>27</td>
-                            <td>28</td>
-                            <td class="alert-info">29</td>
-                            <td>30</td>
-                            <td>31</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-
-                    </table>
+                <div class="card-body example-1 square " style="max-height:410px;height:410px !important; overflow:hidden;">
+                    <div id="chartContainer" style="height: 100%; max-width: 920px; margin: 0px auto; box-shadow:0px 0px 10px 0px gray"></div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row margin-right-0px dashboard-widget">
         <div class="col-sm-3">
             <div class="card ">
                 <div class="card-header">
@@ -262,8 +207,117 @@
         </div>
 
     </div>
+    <div class="row margin-right-0px dashboard-widget">
+        <div class="col-sm-6 dashboard-widget-container">
+            <div class="card" style="height:370px;border-radius:0px;">
+                <div class="card-header">
+                    <p style="margin-bottom:0;"><label class="">Upcomming Events </label><span class="pull-right"><a><i class="fa fa-caret-down text-info"></i></a> <a> <i class="fa fa-refresh text-success"></i></a><a> <i class="fa fa-close text-danger"></i></a></span></p>
+                </div>
+                <div class="card-body">
+                    <table class="table table-striped table-bordered table-sm text-center">
+                        <tr>
+                            <th>Sun</th>
+                            <th>Mon</th>
+                            <th>Tue</th>
+                            <th>Wed</th>
+                            <th>Thu</th>
+                            <th>Fri</th>
+                            <th>Sat</th>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                            <td>4</td>
+                            <td>5</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>7</td>
+                            <td>8</td>
+                            <td>9</td>
+                            <td class="alert-danger">10</td>
+                            <td>11</td>
+                            <td>12</td>
+                        </tr>
+                        <tr>
+                            <td>13</td>
+                            <td>14</td>
+                            <td>15</td>
+                            <td>16</td>
+                            <td>17</td>
+                            <td>18</td>
+                            <td class="alert-danger">19</td>
+                        </tr>
+                        <tr>
+                            <td class="alert-success">20</td>
+                            <td>21</td>
+                            <td>22</td>
+                            <td>23</td>
+                            <td>24</td>
+                            <td>25</td>
+                            <td>26</td>
+                        </tr>
+                        <tr>
+                            <td>27</td>
+                            <td>28</td>
+                            <td class="alert-info">29</td>
+                            <td>30</td>
+                            <td>31</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
 
+<script>
+    window.onload = function () {
+        //document.getElementById("bars").style.display = "block";
+        //document.getElementById("close").style.display = "none";
+        $('.nav-li').each(function () {
+            $(this).hide();
+        });
 
-<style>
-</style>
+
+        var options = {
+            animationEnabled: true,
+            title: {
+                text: "GDP Growth Rate - 2016"
+            },
+            axisY: {
+                title: "Growth Rate (in %)",
+                suffix: "%",
+                includeZero: false
+            },
+            axisX: {
+                title: "Countries"
+            },
+            data: [{
+                type: "column",
+                yValueFormatString: "#,##0.0#" % "",
+                dataPoints: [
+                    { label: "Iraq", y: 10.09 },
+                    { label: "Turks & Caicos Islands", y: 9.40 },
+                    { label: "Nauru", y: 8.50 },
+                    { label: "Ethiopia", y: 7.96 },
+                    { label: "Uzbekistan", y: 7.80 },
+                    { label: "Nepal", y: 7.56 },
+                    { label: "Iceland", y: 7.20 },
+                    { label: "India", y: 7.1 }
+
+                ]
+            }]
+        };
+        $("#chartContainer").CanvasJSChart(options);
+
+    }
+
+</script>
