--- a/SchoolManagementSystem/Views/Shared/_Layout.cshtml
+++ b/SchoolManagementSystem/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>@ViewBag.Title - School System</title>
+    <title>@ViewBag.Title | School </title>
     <link href="~/Content/font-awesome.css" rel="stylesheet" />
     <link href="~/Content/w3.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
@@ -17,28 +17,80 @@
         .n-b {
             height: 48px;
         }
-        .btn{
-            z-index:0;
+
+        .btn {
+            z-index: 0;
+        }
+
+        /*.card-header {
+            padding: 0;
+        }*/
+
+        .collapse.show {
+            content: "\2212";
+        }
+        .dropdown-menu{
+            left:auto !important;
         }
     </style>
 </head>
 <body>
-    <div class="w3-sidebar w3-bar-block w3-black w3-xxlarge sidenav" style="width:0; padding-top:0;" id="mySidenav">
-        <button class="w3-bar-item w3-button text-right"><i class="fa fa-close" id="close" onclick="toggleNav()"></i></button>
-        <h4>School Management</h4>
-        <a href="/Home/Index" class="w3-bar-item w3-button n-b"><i class="fa fa-home"></i><label style="margin-left:15px;">Dashboard</label></a>
-        <a href="/Students/Index" class="w3-bar-item w3-button n-b"><i class="fa fa-group"></i><label style="margin-left:15px;">Students</label></a>
-        <a href="/Teacher/Index" class="w3-bar-item w3-button n-b"><i class="fa fa-male"></i><label style="margin-left:15px;">Teachers</label></a>
-        <a href="/Classes/Index" class="w3-bar-item w3-button n-b"><i class="fa fa-university"></i><label style="margin-left:15px;">Dashboard</label></a>
-        <a href="#" class="w3-bar-item w3-button n-b"><i class="fa fa-trash"></i><label style="margin-left:15px;">Dashboard</label></a>
-    </div>
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark purple lighten-1" style="padding-left: 30px;padding-right:30px;">
+        <a class="navbar-brand" href="/Home/Index">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-5" aria-controls="navbarSupportedContent-5" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-5">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Dashboard
+                    </a>
+                    <div class="dropdown-menu dropdown-purple" aria-labelledby="navbarDropdownMenuLink-5">
+                        <a class="dropdown-item waves-effect waves-light" href="/Home/Index">Home</a>
+                        <a class="dropdown-item waves-effect waves-light" href="/Home/Student">Students</a>
+                        <a class="dropdown-item waves-effect waves-light" href="/Home/Parents">Parents</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Students
+                    </a>
+                    <div class="dropdown-menu dropdown-purple" aria-labelledby="navbarDropdownMenuLink-5">
+                        <a class="dropdown-item waves-effect waves-light" href="/Students/Index">Home</a>
+                        <a class="dropdown-item waves-effect waves-light" href="/Students/StudentDetail">Details</a>
+                        <a class="dropdown-item waves-effect waves-light" href="/Students/Form">Admission Form</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Teachers
+                    </a>
+                    <div class="dropdown-menu dropdown-purple" aria-labelledby="navbarDropdownMenuLink-5">
+                        <a class="dropdown-item waves-effect waves-light" href="javascript:;;">Action</a>
+                        <a class="dropdown-item waves-effect waves-light" href="javascript:;;">Another action</a>
+                        <a class="dropdown-item waves-effect waves-light" href="javascript:;;">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto nav-flex-icons">
+                <li class="nav-item">
+                    <a class="nav-link waves-effect waves-light">1 <i class="fa fa-envelope"></i></a>
+                </li>
+                <li class="nav-item avatar dropdown">
+                    <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width:45px;height:45px;"><img  src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" class="img-fluid rounded-circle z-depth-0"></a>
+                    <div class="dropdown-menu dropdown-menu-right dropdown-purple" aria-labelledby="navbarDropdownMenuLink-5">
+                        <a class="dropdown-item waves-effect waves-light" href="javascript:;;">Action</a>
+                        <a class="dropdown-item waves-effect waves-light" href="javascript:;;">Another action</a>
+                        <a class="dropdown-item waves-effect waves-light" href="javascript:;;">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
     <div id="main" style="margin-left:0;">
         <div class="container-fluid">
-            <div class="row form-group">
-                <div class="col-sm-12">
-                    <button class="w3-bar-item w3-button bg-light" role="button" onclick="toggleNav()"><i class="fa fa-bars"></i></button>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-sm-12">
                     <p>
@@ -50,13 +102,10 @@
         </div>
     </div>
     <script type="text/javascript" src="~/js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="~/js/popper.min.js"></script>
     <script type="text/javascript" src="~/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/js/mdb.min.js"></script>
     <script src="~/js/sidebar.min.js"></script>
     <script src="~/Scripts/jquery.canvasjs.min.js"></script>
     <script>
-        //function openNav() {
         function toggleNav() {
             if (document.getElementById("mySidenav").style.width == "250px") {
                 document.getElementById("mySidenav").style.width = "0px";
@@ -76,46 +125,6 @@
         }
     </script>
     <script>
-        window.onload = function () {
-            document.getElementById("bars").style.display = "block";
-            document.getElementById("close").style.display = "none";
-            $('.nav-li').each(function () {
-                $(this).hide();
-            });
-
-
-            var options = {
-                animationEnabled: true,
-                title: {
-                    text: "GDP Growth Rate - 2016"
-                },
-                axisY: {
-                    title: "Growth Rate (in %)",
-                    suffix: "%",
-                    includeZero: false
-                },
-                axisX: {
-                    title: "Countries"
-                },
-                data: [{
-                    type: "column",
-                    yValueFormatString: "#,##0.0#" % "",
-                    dataPoints: [
-                        { label: "Iraq", y: 10.09 },
-                        { label: "Turks & Caicos Islands", y: 9.40 },
-                        { label: "Nauru", y: 8.50 },
-                        { label: "Ethiopia", y: 7.96 },
-                        { label: "Uzbekistan", y: 7.80 },
-                        { label: "Nepal", y: 7.56 },
-                        { label: "Iceland", y: 7.20 },
-                        { label: "India", y: 7.1 }
-
-                    ]
-                }]
-            };
-            $("#chartContainer").CanvasJSChart(options);
-
-        }
 
         $(document).ready(function () {
             $('#example').DataTable();
