--- a/SchoolManagementSystem/Views/Classes/NewClass.cshtml
+++ b/SchoolManagementSystem/Views/Classes/NewClass.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-sm-12">
-        <div class="card" style="height:370px;border-radius:0px;">
+        <div class="card" style="border-radius:0px;">
             <div class="card-header">
                 <p style="margin-bottom:0;"><label class="">Upcomming Events </label><span class="pull-right"><a><i class="fa fa-caret-down text-info"></i></a> <a> <i class="fa fa-refresh text-success"></i></a><a> <i class="fa fa-close text-danger"></i></a></span></p>
             </div>
